--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto:300,400,500,600,700" media="all">
-    <link href="assets/css/vendors.css" rel="stylesheet" />
-    <link href="assets/css/theme.css" rel="stylesheet" />
-    <link href="assets/css/app.css" rel="stylesheet" />
+    <link href="/assets/css/vendors.css" rel="stylesheet" />
+    <link href="/assets/css/theme.css" rel="stylesheet" />
+    <link href="/assets/css/app.css" rel="stylesheet" />
   </head>
   <body class="m-page--wide m-header--fixed m-header--fixed-mobile m-footer--push m-aside--offcanvas-default" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
