--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto:300,400,500,600,700" media="all">
     <link href="/assets/css/vendors.css" rel="stylesheet" />
-    <link href="https://keenthemes.com/metronic/preview/assets/demo/demo12/base/style.bundle.css" rel="stylesheet" />
+    <link href="/assets/css/theme.css" rel="stylesheet" />
     <link href="/assets/css/fontawesome.css" rel="stylesheet"/>
     <link href="/assets/css/app.css" rel="stylesheet" />
   </head>
